{
    "name": "InputActionPlayer",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "1ca12978-9431-4518-aed0-0338c9bde829",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1a25baa1-5d99-4d65-a249-07b67b393655",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mosuse",
                    "type": "Value",
                    "id": "518522c8-f587-49f3-9333-a6c497bb55ce",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4ba1208b-516c-4135-8324-e36b01f45ea6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "286f4016-9e73-46b0-a9e5-a0c3351a431e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e28243ed-fd69-42da-b558-16356e3badd4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "60844437-ea4f-4deb-9b13-9535ce9ca3d7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "66873310-d717-41d9-a46b-06b60b2baffd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3da7cd7b-b0f1-4a22-b6bb-604a85f241e0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mosuse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AbilitiesActions",
            "id": "e916a3ba-1422-492a-b0a2-fc89bc1a877b",
            "actions": [
                {
                    "name": "TimeFreeze",
                    "type": "Button",
                    "id": "5e1ef71b-320a-42e6-a6cc-1a2f50e3f913",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4b8178c7-e14e-487a-bf0f-fa5133164af5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeFreeze",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}